docs(docs-infra): fix y scroll in api reference
fix y scroll in api reference as the majority of HttpsCallable was not visible

Fixes #52638

--- a/adev/src/app/features/references/api-reference-details-page/api-reference-details-page.component.scss
+++ b/adev/src/app/features/references/api-reference-details-page/api-reference-details-page.component.scss
@@ -105,7 +105,7 @@
     & > .docs-code {
       width: 100%;
       max-height: 93vh;
-      overflow: hidden;
+      overflow: auto;
       padding: 0;
 
       @include mq.for-desktop-down {
@@ -145,7 +145,6 @@
 
     pre {
       white-space: pre;
-      overflow-x: auto;
       margin: 0;
     }
   }
